--- a/style.css
+++ b/style.css
@@ -333,3 +333,81 @@ header {
   grid-row: span 2;
   height: 83vh;
 }
+
+.contact-section {
+  position: relative;
+  width: 100%;
+  margin: top 100px;
+  /* margin: bottom 200px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.contact-section .img1 {
+  position: absolute;
+  top: 10%;
+  height: 400px;
+  right: 20px;
+  clip-path: polygon(32% 0, 94% 0, 70% 100%, 0% 100%);
+}
+
+.contact-section .img2 {
+  position: absolute;
+  left: 50px;
+  top: 10px;
+  height: 200px;
+  clip-path: polygon(35% 6%, 75% 0%, 100% 50%, 75% 100%, 36% 95%, 8% 49%);
+}
+
+.contact-section .img3 {
+  position: absolute;
+  left: 5%;
+  bottom: 20%;
+  height: 250px;
+  width: 250px;
+  clip-path: polygon(52% 5%, 100% 38%, 82% 100%, 34% 93%, 0% 38%);
+}
+
+.contact-section p {
+  margin-top: 100px;
+}
+
+.contact-section h1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 70px;
+  max-width: 550px;
+  text-align: center;
+  background: linear-gradient(
+    to right,
+    #4acfee,
+    #53f6c9,
+    #02d79a,
+    #6070fd,
+    #2a46ff,
+    #0099ff,
+    #4acfee
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate-gradient 2.5s linear infinite;
+}
+
+.contact-section button {
+  padding: 10px 25px;
+  border: 1px solid gray;
+  background-color: #0f1217;
+  color: gray;
+  border-radius: 20px;
+  box-shadow: 0 0 5px lightgray;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.contact-section button:hover {
+  box-shadow: 0 0 15px lightgray;
+  opacity: 0.7;
+}
