--- a/style.css
+++ b/style.css
@@ -447,3 +447,26 @@ header {
   box-shadow: 0 0 15px lightgray;
   opacity: 0.7;
 }
+
+/* Blur Effect animation */
+
+.autoBlur {
+  animation: autoBlurAnimation linear both;
+  animation-timeline: view();
+}
+@keyframes autoBlurAnimation {
+  0% {
+    filter: blur(40px);
+  }
+  40%,
+  60% {
+    filter: blur(0);
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  100% {
+    filter: blur(40px);
+    transform: translateY(-200px);
+    opacity: 0;
+  }
+}
