--- a/style.css
+++ b/style.css
@@ -470,3 +470,18 @@ header {
     opacity: 0;
   }
 }
+
+/* Take full screen animation */
+.autoTakeFull {
+  animation: autoTakeFullAnimation both;
+  animation-timeline: view(70% 65%);
+}
+
+@keyframes autoTakeFullAnimation {
+  to {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    margin-bottom: 100px;
+  }
+}
