--- a/style.css
+++ b/style.css
@@ -485,3 +485,20 @@ header {
     margin-bottom: 100px;
   }
 }
+
+/* Auto DisplayAnimation */
+.autoDisplay {
+  animation: autoDisplayAnimation both;
+  animation-timeline: view(70% 5%);
+}
+
+@keyframes autoDisplayAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(200px) scale(0.3);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
