--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ header {
   height: 100vh;
   overflow: hidden;
 }
+.hero-vid {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
 .hero-video {
   width: 100%;
